; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_cron.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_cron.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@force_write_index = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cron() #0 {
  %1 = call i32 (...) @storage_volumes_relax_astat()
  %2 = call i32 (...) @create_all_outbound_connections()
  %3 = call i32 (...) @fsync_step()
  %4 = load i64, i64* @force_write_index, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 (...) @fork_write_index()
  br label %8

8:                                                ; preds = %6, %0
  %9 = call i32 (...) @check_child_status()
  %10 = call i32 (...) @dyn_garbage_collector()
  ret void
}

declare dso_local i32 @storage_volumes_relax_astat(...) #1

declare dso_local i32 @create_all_outbound_connections(...) #1

declare dso_local i32 @fsync_step(...) #1

declare dso_local i32 @fork_write_index(...) #1

declare dso_local i32 @check_child_status(...) #1

declare dso_local i32 @dyn_garbage_collector(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
